# simple-calculator-mcp-server

./: LICENSE  README.md  calculator.py  pyproject.toml
arithmo_mcp_server/: __init__.py  calculator.py  server.py  tempCodeRunnerFile.py
